--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,3 +102,11 @@ p, li, h1, h2, h3, h4, h5, h6, a{
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(44, 62, 80, 0.7);
 }
+
+footer {
+    background-color: #2C3E50;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 10px;
+    margin: 50px -10px 10px;
+}
