--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,6 @@ p, li, h1, h2, h3, h4, h5, h6, a{
 
 footer {
     background-color: #2C3E50;
-    color: #FFFFFF;
     text-align: center;
     padding: 10px;
     margin: 50px -10px 10px;
@@ -116,4 +115,25 @@ footer {
     height: 75px;
     border-radius: 50%;
     align-items: center;
+}
+
+.about {
+    background-color: #2C3E50;
+    padding: 10px;
+    margin: 50px 10px 50px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(44, 62, 80, 0.7);
+}
+
+.about-heading {
+    color: #F1C40F;
+    font-size: 2rem;
+    text-align: center;
+    margin: 10px;
+}
+
+.about-text {
+    line-height: 1.7rem;
+    font-size: 1.3rem;
+    padding: 0px 25px 10px 25px;
 }
