Logo temp deleted and Contact Page started

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,12 +111,14 @@ footer {
     margin: 50px -10px 10px;
 }
 
+/*
 .logo {
     width: 75px;
     height: 75px;
     border-radius: 50%;
     align-items: center;
 }
+*/
 
 .about {
     background-color: #2C3E50;
