--- a/stylesheet.css
+++ b/stylesheet.css
@@ -220,3 +220,41 @@ footer {
         text-align: left;
     }
 }
+
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4);
+    gap: 10px;
+    padding: 0px 10px 10px 10px; 
+}
+
+.grid-items-projects {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2C3E50;
+    padding: 10px;
+    font-size: 1rem;
+    text-align: left;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(44, 62, 80, 0.7);
+}
+
+.grid-items-img-projects {
+    display: flex;
+    justify-content: center;
+    background-color: #2C3E50;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(44, 62, 80, 0.7);
+}
+
+.grid-items-img-projects img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.description-grid {
+
+}
